Fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,44 +3,41 @@
 @tailwind utilities;
 
 @layer base {
-
     :root {
         --gradient: linear-gradient(to top left, #1488CC, #2B32B2);
 
-        --background: 228 98.65% 98.26%;
-        --foreground: 228 7.3% 0.52%;
-    
-        --muted: 228 7.3% 91.3%;
-        --muted-foreground: 228 3.65% 41.3%;
-    
-        --popover: 228 31.6% 91.3%;
-        --popover-foreground: 228 7.3% 0.65%;
-    
-        --card: 230 20% 94%;
-        --card-foreground: 228 7.3% 0.65%;
-    
-        --border: 228 12.3% 79.52%;
-        --input: 233 36% 86%;
-    
-        --primary: 215 82% 44%;
-        --primary-foreground: 215 8.2% 97.2%;
-    
-        --secondary: 233 36% 86%;
-        --secondary-foreground: 228 5.38% 11.3%;
-    
-        --accent: 233 36% 86%;
-        --accent-foreground: 228 5.38% 11.3%;
-    
+        --background: 0 0% 100%;
+        --foreground: 222.2 84% 4.9%;
+
+        --card: 210 14% 96.1%;
+        --card-foreground: 222.2 84% 4.9%;
+
+        --popover: 0 0% 100%;
+        --popover-foreground: 222.2 84% 4.9%;
+
+        --primary: 221.2 83.2% 53.3%;
+        --primary-foreground: 210 40% 98%;
+
+        --secondary: 210 4% 90%;
+        --secondary-foreground: 222.2 47.4% 11.2%;
+
+        --muted: 210 4% 90%;
+        --muted-foreground: 215.4 16.3% 46.9%;
+
+        --accent: 210 4% 90%;
+        --accent-foreground: 222.2 47.4% 11.2%;
+
         --destructive: 0 84.2% 60.2%;
-        --destructive-foreground: 0 0% 98%;
-    
-        --ring: 215 82% 44%;
+        --destructive-foreground: 210 40% 98%;
+
+        --border: 214.3 31.8% 91.4%;
+        --input: 214.3 31.8% 91.4%;
+        
+        --ring: 221.2 83.2% 53.3%;
         --radius: 0.5rem;
     }
 
     .dark {
-        --gradient: linear-gradient(to top left, #1488CC, #2B32B2);
-
         --background: 215 53.3% 3.52%;
         --foreground: 215 8.2% 97.2%;
 
@@ -52,25 +49,25 @@
 
         --card: 215 48.6% 5.72%;
         --card-foreground: 215 8.2% 97.2%;
-
+        
+        --primary: 215 82% 44%;
+        --primary-foreground: 215 8.2% 97.2%;
+        
+        --secondary: 215 41% 13.2%;
+        --secondary-foreground: 215 8.2% 97.2%;
+        
+        --accent: 215 41% 13.2%;
+        --accent-foreground: 215 8.2% 97.2%;
+        
+        --destructive: 0 62.8% 30.6%;
+        --destructive-foreground: 215 8.2% 97.2%;
+        
         --border: 215 41% 13.2%;
         --input: 215 41% 13.2%;
 
-        --primary: 215 82% 44%;
-        --primary-foreground: 215 8.2% 97.2%;
-
-        --secondary: 215 41% 13.2%;
-        --secondary-foreground: 215 8.2% 97.2%;
-
-        --accent: 215 41% 13.2%;
-        --accent-foreground: 215 8.2% 97.2%;
-
-        --destructive: 0 62.8% 30.6%;
-        --destructive-foreground: 215 8.2% 97.2%;
-
         --ring: 215 82% 44%;
         --radius: 0.5rem;
-    }
+    } 
 }
 
 .bg-gradient {
@@ -84,6 +81,7 @@
 .active {
     background: hsl(var(--secondary));
     color: var(--foreground);
+    font-weight: bold;
 }
 
 @layer base {
